# big-mind-assintant

./: .gitignore  README.md  example.env  main.py  pyproject.toml
shemas/: gemini.py
