[tool.poetry]
name = "big-mind-assitant"
version = "0.1.0"
description = ""
authors = ["Vitor José Stähelin <vitorjosestahelin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gtts = "^2.5.3"
google-generativeai = "^0.8.3"
environs = "^11.0.0"
python-telegram-bot = "^21.7"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
